e2e/test/lb-with-proxyprotocol-set/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lb-with-proxyprotocol-set
  labels:
    all:
    lke:
spec:
  namespace: "lb-with-proxyprotocol-set"
  catch:
    - script:
        shell: bash
        shellArgs:
          - -c
        content: |
          set -euo pipefail
          echo "Test failed. Fetching CCM logs..."
          kubectl logs -n kube-system daemonsets/ccm-linode | grep "lb-with-proxyprotocol-set" | tail -100
  steps:
    - name: Create pods and services
      try:
        - apply:
            file: create-pods-services.yaml
      catch:
        - describe:
            apiVersion: v1
            kind: Pod
        - describe:
            apiVersion: v1
            kind: Service
    - name: Check endpoints exist
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Endpoints
            metadata:
              name: svc-test
            (subsets[0].addresses != null): true
            (subsets[0].ports != null): true
    - name: Check that loadbalancer ip is assigned
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Service
            metadata:
              name: svc-test
            status:
              (loadBalancer.ingress[0].ip != null): true
    - name: Annotate service port 80 with v1 and 8080 with v2
      try:
        - script:
            shell: bash
            shellArgs:
              - -c
            content: |
              set -euo pipefail
              kubectl annotate svc svc-test -n $NAMESPACE service.beta.kubernetes.io/linode-loadbalancer-port-80='{"proxy-protocol": "v1"}'
              kubectl annotate svc svc-test -n $NAMESPACE service.beta.kubernetes.io/linode-loadbalancer-port-8080='{"proxy-protocol": "v2"}'
            check:
              ($error == null): true
    - name: Check NodeBalancerConfig for port 80 to have ProxyProtocol v1 and port 8080 to have ProxyProtocol v2
      try:
        - script:
            shell: bash
            shellArgs:
              - -c
            content: |
              set -euo pipefail

              nbid=$(KUBECONFIG=$KUBECONFIG NAMESPACE=$NAMESPACE LINODE_TOKEN=$LINODE_TOKEN ../scripts/get-nb-id.sh)

              for i in {1..10}; do
                nbconfig=$(curl -s \
                  -H "Authorization: Bearer $LINODE_TOKEN" \
                  -H "Content-Type: application/json" --fail-early --retry 3 \
                  "$LINODE_URL/v4/nodebalancers/$nbid/configs")

                port_80_v1=$(echo $nbconfig | jq -r '.data[] | select(.port == 80) | .proxy_protocol == "v1"')
                port_8080_v2=$(echo $nbconfig | jq -r '.data[] | select(.port == 8080) | .proxy_protocol == "v2"')

                if [[ $port_80_v1 == "true" && $port_8080_v2 == "true" ]]; then
                    echo "Conditions met"
                    break
                else
                    echo "Conditions not met"
                fi
                sleep 10
              done
            check:
              ($error): ~
              (contains($stdout, 'Conditions met')): true
